--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <!-- hero section starts -->
     <div class="hero">
         <div class="hero-insider">
-            <div class="hero-content">
+            <div class="hero-content hidden">
                 Connect
             </div>
         </div>
@@ -59,13 +59,13 @@
     <div class="contact-form">
         <div class="contact-form-insider">
             <div class="contact-form-right">
-                <div class="contactfom-right-subheader">
+                <div class="contactfom-right-subheader hidden">
                     CONTACT
                 </div>
-                <div class="contact-form-right-header">
+                <div class="contact-form-right-header hidden">
                     Let's Empower You
                 </div>
-                <div class="contact-form-content">
+                <div class="contact-form-content hidden">
                     We bring the breathe of our experience and industry
                     knowledge to help you succeed
                 </div>
@@ -100,32 +100,32 @@
     <div class="detail">
         <div class="detail-insider">
             <div class="detail-call">
-                <div class="detail-call-head">
+                <div class="detail-call-head hidden">
                     Call Us
                 </div>
-                <div class="detail-call-number">
+                <div class="detail-call-number hidden">
                     +97142556168
                 </div>
             </div>
             <div class="detail-call">
-                <div class="detail-call-head">
+                <div class="detail-call-head hidden">
                     Visit Us
                 </div>
-                <div class="detail-call-hours">
+                <div class="detail-call-hours hidden">
                     Working hours
                 </div>
-                <div class="detail-call-day">Monday-Friday</div>
-                <div class="detail-call-day">9 am to 7 pm</div>
+                <div class="detail-call-day hidden">Monday-Friday</div>
+                <div class="detail-call-day hidden">9 am to 7 pm</div>
             </div>
             <div class="detail-call">
-                <div class="detail-call-head">
+                <div class="detail-call-head hidden">
                     Follow Us
                 </div>
                 <div class="detail-socialmedia">
-                    <img src="./allimages/Layer 2.svg" alt="" class="detail-socialmedia-icons">
-                    <img src="./allimages/twitter.svg" alt="" class="detail-socialmedia-icons">
-                    <img src="./allimages/instagram.svg" alt="" class="detail-socialmedia-icons">
-                    <img src="./allimages/linkedin.svg" alt="" class="detail-socialmedia-icons">
+                    <img src="./allimages/Layer 2.svg" alt="" class="detail-socialmedia-icons hidden">
+                    <img src="./allimages/twitter.svg" alt="" class="detail-socialmedia-icons hidden">
+                    <img src="./allimages/instagram.svg" alt="" class="detail-socialmedia-icons hidden">
+                    <img src="./allimages/linkedin.svg" alt="" class="detail-socialmedia-icons hidden">
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
     <!-- details section ends -->
 
     <!-- map seciton starts -->
-    <div class="contact-map">
+    <div class="contact-map hidden">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d28899.263768568922!2d55.14297370525842!3d25.12189453489431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1688373071563!5m2!1sen!2snp"
             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
