--- a/index.html
+++ b/index.html
@@ -590,6 +590,9 @@
     </div>
     <!-- final footer ends -->
 
+    <div class="imgrobo">
+        <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
+    </div>
 
     <!-- MDB -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
