--- a/ouroffering.html
+++ b/ouroffering.html
@@ -46,7 +46,7 @@
     <!-- navigation ends -->
     <!-- hero section starts -->
     <div class="hero">
-        <div class="hero-insider">
+        <div class="hero-insider hidden">
             <div class="hero-content">
                 Our Offerings
             </div>
@@ -63,7 +63,7 @@
                     alt="our victories" id="ourvictoriesimg" class="hidden">
             </div>
             <div class="ourvictories-right" id="victrt">
-                <div class="ourvictories-header">
+                <div class="ourvictories-header hidden">
                     We provide portfolio management services
                 </div>
             </div>
@@ -80,10 +80,10 @@
             </div>
             <div class="header-left">
                 <div class="header-left-inner">
-                    <div class="header-header">
+                    <div class="header-header hidden">
                         BlueChipFx
                     </div>
-                    <div class="header-content">
+                    <div class="header-content hidden">
                         A perfect base for forex trading and stock market investment.
                         Launched in 2021, BluechipFx is a young trading platform and to its
                         credit still boasts a satisfied customer base of thousands of active
@@ -109,10 +109,10 @@
     <div class="acre">
         <div class="acre-insider">
             <div class="acre-left">
-                <div class="acre-left-header">
+                <div class="acre-left-header hidden">
                     Acre n yard
                 </div>
-                <div class="acre-content">
+                <div class="acre-content hidden">
                     A newly integrated member of the Bluechip Group.Acre N'Yard is a
                     real estate investigation vertical in India and Dubai delivered by
                     experienced investment managers at Bluechip Investments.<br><br>
@@ -134,10 +134,10 @@
         <div class="tradex-insider">
             <div class="tradex-left">
                 <div class="tradex-left-inner">
-                    <div class="tradex-header">
+                    <div class="tradex-header hidden">
                         BlueChip TradeX-
                     </div>
-                    <div class="tradex-content">
+                    <div class="tradex-content hidden">
                         BlueChip TradeX is an international online Forex and CFD trading
                         company that provides 24 hour access to a wide variety of trading
                         instruments including forex currency pairs, commodities, futures,
