--- a/victories.html
+++ b/victories.html
@@ -49,7 +49,7 @@
     <!-- hero section starts -->
     <div class="hero">
         <div class="hero-insider">
-            <div class="hero-content">
+            <div class="hero-content hidden">
                 Our Victories
             </div>
         </div>
@@ -63,10 +63,10 @@
             </div>
             <div class="header-left">
                 <div class="header-left-inner">
-                    <div class="header-header">
+                    <div class="header-header hidden">
                         Awarded fastest growing platform at Forex Expo 2022
                     </div>
-                    <div class="header-content">
+                    <div class="header-content hidden">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste delectus, veniam itaque nostrum
                         ullam iure voluptatem dolores pariatur quas tenetur. Quos accusantium fuga dignissimos est neque
                         illo nobis eligendi autem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa fugiat
@@ -84,7 +84,7 @@
     <div class="acre">
         <div class="acre-insider">
             <div class="acre-left">
-                <div class="acre-left-header">
+                <div class="acre-left-header hidden">
                     First forex company to become associate sponsers for blockbuster movie releases all over the MENA
                     region.
                 </div>
@@ -99,10 +99,10 @@
         <div class="tradex-insider">
             <div class="tradex-left">
                 <div class="tradex-left-inner">
-                    <div class="tradex-header">
+                    <div class="tradex-header hidden">
                         First Financial Advisory to be displayed on Burj Khalifa
                     </div>
-                    <div class="tradex-content">
+                    <div class="tradex-content hidden">
                         " Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis atque nisi qui eaque
                         laborum velit, aspernatur totam quidem! Fugit sunt cum sapiente animi nulla hic deleniti quae
                         dolore vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit consequuntur
@@ -126,7 +126,7 @@
     <!-- final banner starts -->
     <div class="finalbanner">
         <div class="finalbanner-insider">
-            <div class="finalbanner-content">
+            <div class="finalbanner-content hidden">
                 And Many More
             </div>
         </div>
