--- a/moments.html
+++ b/moments.html
@@ -49,7 +49,7 @@
     <!-- hero section starts -->
     <div class="hero">
         <div class="hero-insider">
-            <div class="hero-content">
+            <div class="hero-content hidden">
                 Moments
             </div>
         </div>
@@ -60,30 +60,30 @@
 
     <div class="gallery">
         <div class="gallery-insider">
-            <div class="gallery-header">
+            <div class="gallery-header hidden">
                 Our Moments
             </div>
             <div class="gallery-body">
                 <div class="image-container">
                     <div class="row">
                         <img src="./allimages/brokers-discussing-trading-strategy-holding-papers-with-financial-data-pointing-pen-charts-cropped-shot-broker-job-stock-market-exchange-concept.png"
-                            alt="">
-                        <img src="./allimages/forex-trade-graph-chart-concept.png" alt="">
+                            alt="" class="momentimg hidden">
+                        <img src="./allimages/forex-trade-graph-chart-concept.png" class="momentimg hidden" alt="">
                         <img src="./allimages/business-man-trader-investor-analysis-stock-market-concept-trading-fund-data-statistic.png"
-                            alt="">
+                            alt="" class="momentimg hidden">
                     </div>
                     <div class="row">
                         <img src="./allimages/collaborative-process-indian-business-mans-during-brainstorming-meeting-officediverse-team-young-people-dressed-suits-cooperating-developing-common-project.png"
-                            alt="">
-                        <img src="./allimages/business-people-working-financial-degrees.png" alt="">
-                        <img src="./allimages/pensive-concentrated-managers-standing-modern-cafe.png" alt="">
+                            alt="" class="momentimg hidden">
+                        <img src="./allimages/business-people-working-financial-degrees.png" alt="" class="momentimg hidden">
+                        <img src="./allimages/pensive-concentrated-managers-standing-modern-cafe.png" alt="" class="momentimg hidden">
                     </div>
                     <div class="row">
-                        <img src="./allimages/close-up-business-people-hands-together-teamwork-concept.png" alt="">
+                        <img src="./allimages/close-up-business-people-hands-together-teamwork-concept.png" alt="" class="momentimg hidden">
                         <img src="./allimages/business-handshake-finance-prosperity-money-technology-asset-background.png"
-                            alt="">
+                            alt="" class="momentimg hidden">
                         <img src="./allimages/company-employees-discussing-market-data-charts-skilled-woman-leader-two-men-looking-diagrams-computer-screen-analyzing-profit-growth-business-growth-female-business-leaders-concept.png"
-                            alt="">
+                            alt="" class="momentimg hidden">
                     </div>
                 </div>
             </div>
