--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <!-- navigation ends -->
     <!-- hero section starts  -->
     <div id="carouselExampleIndicators" class="carousel slide " data-mdb-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-inner" id="carousel-inner-banner">
+            <!-- hero carousel 1  -->
             <div class="carousel-item active">
                 <img src="./allimages/sonu sood.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
-                <!-- hero section starts  -->
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top hidden">
@@ -73,145 +73,54 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="hero-bottom hidden">
-                            <div class="hero-btn-designs">
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
-                                <span class="hero-bottom-text">
-                                    Our Business Verticals
-                                </span>
-                                <span class="hero-line">
-                                    <hr>
-                                </span>
+                    </div>
+                </div>
+            </div>
+            <!-- hero carousel 2 -->
+            <div class="carousel-item">
+                <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                <div class="carousel-caption d-block d-md-block w-100" id="hero">
+                    <div class="hero-insider">
+                        <div class="hero-top hidden">
+                            <div class="hero-right-content">
+                                <span class="hero-coloured">Scoping for</span><br>
+                                <span class="hero-text">opportunities as a trait in<br> the DNA embarking on a </span>
+                                <strong class="hero-strong"><br> Path of possibilities
+                                </strong>
                             </div>
-                            <div class="hero-bottom-values">
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/music.png" alt="" class="hero-bottom-img hidden">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img hidden">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img hidden">
-                                </div>
-                                <div class="hero-bottom-img">
-                                    <img src="./allimages/tradex.png" alt="" class="hero-bottom-img hidden">
-                                </div>
+                            <div class="hero-right-btn">
+                                <button class="hero-btn">
+                                    Let's Work Together
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- hero section ends -->
             </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="./allimages/trade.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
-                        <!-- hero section starts  -->
-                        <div class="carousel-caption d-block d-md-block w-100" id="hero">
-                            <div class="hero-insider">
-                                <div class="hero-top">
-                                    <div class="hero-right-content">
-                                        <span class="hero-coloured">A decade of </span><br>
-                                        <span class="hero-text">transforming dreams into reality and making a lasting
-                                            impact by </span>
-                                        <strong class="hero-strong">Investing in
-                                            our relationships</strong>
-                                    </div>
-                                    <div class="hero-right-btn">
-                                        <button class="hero-btn">
-                                            Let's Work Together
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="hero-bottom">
-                                    <div class="hero-btn-designs">
-                                        <span class="hero-line">
-                                            <hr>
-                                        </span>
-                                        <span class="hero-bottom-text">
-                                            Our Business Verticals
-                                        </span>
-                                        <span class="hero-line">
-                                            <hr>
-                                        </span>
-                                    </div>
-                                    <div class="hero-bottom-values">
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/music.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                    </div>
-                                </div>
+            <!-- hero carousel 3  -->
+            <div class="carousel-item">
+                <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
+                <div class="carousel-caption d-block d-md-block w-100" id="hero">
+                    <div class="hero-insider">
+                        <div class="hero-top hidden">
+                            <div class="hero-right-content">
+                                <span class="hero-coloured">A decade of</span><br>
+                                <span class="hero-text">transforming dreams into reality and making a lasting impact
+                                    by</span>
+                                <strong class="hero-strong">Investing in relationships</strong>
+                            </div>
+                            <div class="hero-right-btn">
+                                <button class="hero-btn">
+                                    Let's Work Together
+                                </button>
                             </div>
                         </div>
-                        <!-- hero section ends -->
-                    </div>
-                </div>
-            </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-mdb-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="./allimages/A&Y.jpg" class="d-block w-100" id="hero-img" alt="Wild Landscape" />
-                        <!-- hero section starts  -->
-                        <div class="carousel-caption d-block d-md-block w-100" id="hero">
-                            <div class="hero-insider">
-                                <div class="hero-top">
-                                    <div class="hero-right-content">
-                                        <span class="hero-coloured">Scoping for</span><br>
-                                        <span class="hero-text">opportunities as a trait in the DNA embarking on a
-                                        </span>
-                                        <strong class="hero-strong">Path of possibilities</strong>
-                                    </div>
-                                    <div class="hero-right-btn">
-                                        <button class="hero-btn">
-                                            Let's Work Together
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="hero-bottom">
-                                    <div class="hero-btn-designs">
-                                        <span class="hero-line">
-                                            <hr>
-                                        </span>
-                                        <span class="hero-bottom-text">
-                                            Our Business Verticals
-                                        </span>
-                                        <span class="hero-line">
-                                            <hr>
-                                        </span>
-                                    </div>
-                                    <div class="hero-bottom-values">
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/music.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/acre-n-yard.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/entertainment.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                        <div class="hero-bottom-img">
-                                            <img src="./allimages/tradex.png" alt="" class="hero-bottom-img">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- hero section ends -->
                     </div>
                 </div>
             </div>
         </div>
+
+    </div>
     </div>
     <!-- hero section  ends -->
 
@@ -231,7 +140,16 @@
                 </div>
 
                 <div class="aboutus-body">
-                    <div class="about-card-top">
+                    <div class="aboutus-logos">
+                        <div class="aboutus-logo1">
+                            <img src="./allimages/music_col.png" alt="" class="aboutus-img-main">
+                            <img src="./allimages/bluechip-fx_color.png" alt="" class="aboutus-img-main">
+                            <img src="./allimages/acre-n-yard_c.png" alt="" class="aboutus-img-main">
+                            <img src="./allimages/entertainment_c.png" alt="" class="aboutus-img-main">
+                            <img src="./allimages/Bluechip-investmant-log0_color.png" alt="" class="aboutus-img-main">
+                        </div>
+                    </div>
+                    <!-- <div class="about-card-top">
                         <div class="about-card hidden" id="aboutrotate">
                             <div class="about-card-img">
                                 <img src="./allimages/Layer -1.svg" alt="" style="height: 75px;">
@@ -270,7 +188,7 @@
                                 efficiency
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -593,6 +511,8 @@
     <div class="imgrobo">
         <img src="./allimages/final-mascot.png" alt="robot" class="robotimg " id="roborotate">
     </div>
+
+    <!-- chatbot ends -->
 
     <!-- MDB -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
