home page change

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="diversify">
             <div class="divesify-insider">
                 <div class="diversify-content">
-                    <div class="diversify-header hidden" id="diverserotate">
+                    <div class="diversify-header" id="diverserotate">
                         <strong> Evolving </strong> to diversify into verticals with opportunity
                     </div>
                     <div class="diversify-content1">
@@ -298,22 +298,6 @@
 
         <div class="ourvictories">
             <div class="ourvictories-insider">
-                <div class="ourvictories-left">
-                    <img src="./allimages/Group 72.png" alt="our victories" id="ourvictoriesimg" class="hidden">
-                </div>
-                <div class="ourvictories-right" id="victrt">
-                    <div class="ourvictories-subheader">
-                        OUR VICTORIES
-                    </div>
-                    <div class="ourvictories-header">
-                        Evolving through diversified verticals
-                    </div>
-                    <div class="ourvictories-btn">
-                        <button type="submit" class="ourvictories-btn1">
-                            Learn How
-                        </button>
-                    </div>
-                </div>
             </div>
         </div>
         <!-- our victories section ends -->
@@ -416,7 +400,7 @@
         <div class="footer-insider">
             <div class="footer-top">
                 <div class="footer-top-right">
-                    <img src="./allimages/Image 7.png" alt="" id="subscribe"> Subscribe to our Newsletter
+                    <img src="./allimages/newsletter-icon (1).png" alt="" id="subscribe"> Subscribe to our Newsletter
                 </div>
                 <div class="footer-top-left">
                     <input type="email" name="email" id="email" placeholder="Your email">
