--- a/we.html
+++ b/we.html
@@ -67,8 +67,7 @@
                         Established since more than a decade to provide extensive financial advisory and services
                         enabling
                         our client's financial growth and security. We organically grew in the fields of
-                        Forex trading, business setup services, Real Estate and asset management.
-                        (Tangible and Intangible).<br><br>
+                        Forex trading, business setup services, realestate and asset management services.<br><br>
 
                         Scoping for opportunities as a trait in the DNA led us to venture into the entertainment
                         business
@@ -83,8 +82,7 @@
                     </div>
                 </div>
                 <div class="aboutus-right">
-                    <img src="./allimages/growth-money-arrow-success-financial-business-coin-concept-investment-earnings-background-with-profit-graph-finance-development-increase-economic-market-chart-digital-stock-currency-strategy.png"
-                        alt="" class="aboutimg">
+                    <img src="./allimages/About-us-banner.png" alt="" class="aboutimg">
                 </div>
             </div>
 
@@ -94,7 +92,7 @@
                         <img src="./allimages/Group 86.svg" alt="" class="aboutusimg">
                     </div>
                     <div class="aboutus-card-header">
-                        VISION
+                       Our  VISION
                     </div>
                     <div class="aboutus-card-content">
                         To facilitate all our stakeholders to pursue their dreams by making them financially independent
