--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
                         <li><a href="./we.html">We</a></li>
-                        <li><a href="./ouroffering.html">Our Offerings</a></li>
-                        <li><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./ouroffering.html">Offerings</a></li>
+                        <li><a href="./victories.html">Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
@@ -64,8 +64,8 @@
                             <div class="hero-right-content">
                                 <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
-                                    our</span>
-                                <strong class="hero-strong">Clients Financial growth</strong>
+                                    our </span>
+                                <span class="hero-strong">Clients Financial growth</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
@@ -84,9 +84,9 @@
                         <div class="hero-top hidden">
                             <div class="hero-right-content">
                                 <span class="hero-coloured">Scoping for</span><br>
-                                <span class="hero-text">opportunities as a trait in<br> the DNA embarking on a </span>
-                                <strong class="hero-strong"><br> Path of possibilities
-                                </strong>
+                                <span class="hero-text">opportunities as a trait in the DNA embarking on a </span>
+                                <span class="hero-strong">path of Possibilities
+                                </span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
@@ -107,7 +107,7 @@
                                 <span class="hero-coloured">A decade of</span><br>
                                 <span class="hero-text">transforming dreams into reality and making a lasting impact
                                     by</span>
-                                <strong class="hero-strong">Investing in relationships</strong>
+                                <span class="hero-strong">Investing in relationships</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
