--- a/we.html
+++ b/we.html
@@ -27,8 +27,8 @@
                 <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
                         <li><a href="./we.html" style="color: #e25926;">We</a></li>
-                        <li><a href="./ouroffering.html">Our Offerings</a></li>
-                        <li><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./ouroffering.html">Offerings</a></li>
+                        <li><a href="./victories.html">Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
@@ -92,7 +92,7 @@
                         <img src="./allimages/Group 86.svg" alt="" class="aboutusimg">
                     </div>
                     <div class="aboutus-card-header">
-                       Our  VISION
+                        OUR VISION
                     </div>
                     <div class="aboutus-card-content">
                         To facilitate all our stakeholders to pursue their dreams by making them financially independent
@@ -104,7 +104,7 @@
                         <img src="./allimages/Group 87.svg" alt="" class="aboutusimg">
                     </div>
                     <div class="aboutus-card-header">
-                        MISSION
+                        OUR MISSION
                     </div>
                     <div class="aboutus-card-content">
                         Using our deep knowledge of customer oriented technical innovation in trading to offer a
@@ -120,7 +120,7 @@
                         <img src="./allimages/Group 88.svg" alt="" class="aboutusimg">
                     </div>
                     <div class="aboutus-card-header">
-                        VALUES
+                        OUR VALUES
                     </div>
                     <div class="aboutus-card-content">
                         He philosophy is simple: our values are focused on our pivotal points which is you our
