--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <span class="hero-coloured">A decade old</span><br>
                                 <span class="hero-text">extensive financial advisory and services provider enabling
                                     our </span>
-                                <span class="hero-strong">Clients Financial growth</span>
+                                <span class="hero-strong">clients financial growth</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
@@ -85,7 +85,7 @@
                             <div class="hero-right-content">
                                 <span class="hero-coloured">Scoping for</span><br>
                                 <span class="hero-text">opportunities as a trait in the DNA embarking on a </span>
-                                <span class="hero-strong">path of Possibilities
+                                <span class="hero-strong">path of possibilities
                                 </span>
                             </div>
                             <div class="hero-right-btn">
@@ -107,7 +107,7 @@
                                 <span class="hero-coloured">A decade of</span><br>
                                 <span class="hero-text">transforming dreams into reality and making a lasting impact
                                     by</span>
-                                <span class="hero-strong">Investing in relationships</span>
+                                <span class="hero-strong">investing in relationships</span>
                             </div>
                             <div class="hero-right-btn">
                                 <button class="hero-btn">
