--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="carousel-caption d-block d-md-block w-100" id="hero">
                     <div class="hero-insider">
                         <div class="hero-top hidden">
-                            <div class="hero-right-content">
+                            <div class="hero-right-content" id="hero-right-spacing">
                                 <span class="hero-coloured">Scoping for</span><br>
                                 <span class="hero-text">opportunities as a trait in the DNA embarking on a </span>
                                 <span class="hero-strong">path of possibilities
