--- a/ouroffering.html
+++ b/ouroffering.html
@@ -59,8 +59,8 @@
     <div class="ourvictories">
         <div class="ourvictories-insider">
             <div class="ourvictories-left">
-                <img src="./allimages/ai-nuclear-energy-future-innovation-disruptive-technology-removebg-preview.png"
-                    alt="our victories" id="ourvictoriesimg" class="hidden">
+                <img src="./allimages/portfolio-management-services-image.png" alt="our victories" id="ourvictoriesimg"
+                    class="hidden">
             </div>
             <div class="ourvictories-right" id="victrt">
                 <div class="ourvictories-header hidden">
@@ -113,7 +113,7 @@
                     Acre n yard
                 </div>
                 <div class="acre-content hidden">
-                    A newly integrated member of the Bluechip Group.Acre N'Yard is a
+                    Acre N'Yard is a
                     real estate investigation vertical in India and Dubai delivered by
                     experienced investment managers at Bluechip Investments.<br><br>
                     Acre N'Yard is focused om enabling real estate investments for all
@@ -130,7 +130,7 @@
     <!-- acre section ends -->
 
     <!-- tradex section starts -->
-    <div class="tradex">
+    <!-- <div class="tradex">
         <div class="tradex-insider">
             <div class="tradex-left">
                 <div class="tradex-left-inner">
@@ -157,7 +157,7 @@
                     alt="" class="tradex-img">
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- tradex section ends -->
 
