--- a/victories.html
+++ b/victories.html
@@ -59,7 +59,7 @@
     <div class="header">
         <div class="header-insider">
             <div class="header-right">
-                <img src="./allimages/TRADEE.png" alt="" class="header-img">
+                <img src="./allimages/forex-expo.png" alt="" class="header-img">
             </div>
             <div class="header-left">
                 <div class="header-left-inner">
