--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="contact-form-content hidden">
                     We bring the breathe of our experience and industry
-                    knowledge to help you succeed
+                    knowledge to help you succeed financially.
                 </div>
             </div>
             <div class="contact-form-left">
@@ -147,7 +147,7 @@
         <div class="footer-insider">
             <div class="footer-top">
                 <div class="footer-top-right">
-                    <img src="./allimages/Image 7.png" alt="" id="subscribe"> Subscribe to our Newsletter
+                    <img src="./allimages/newsletter-icon (1).png" alt="" id="subscribe"> Subscribe to our Newsletter
                 </div>
                 <div class="footer-top-left">
                     <input type="email" name="email" id="email" placeholder="Your email">
