--- a/victories.html
+++ b/victories.html
@@ -66,14 +66,14 @@
                     <div class="header-header hidden">
                         Awarded fastest growing platform at Forex Expo 2022
                     </div>
-                    <div class="header-content hidden">
+                    <!-- <div class="header-content hidden">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste delectus, veniam itaque nostrum
                         ullam iure voluptatem dolores pariatur quas tenetur. Quos accusantium fuga dignissimos est neque
                         illo nobis eligendi autem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa fugiat
                         eos itaque, obcaecati,<br><br>
                         debitis asperiores corrupti architecto harum, quis accusamus molestiae exercitationem.
                         Blanditiis, nobis! Debitis cumque eum aliquid fugit fuga!
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -100,9 +100,9 @@
             <div class="tradex-left">
                 <div class="tradex-left-inner">
                     <div class="tradex-header hidden">
-                        First Financial Advisory to be displayed on Burj Khalifa
+                        First Financial Advisory to be displayed<br> on Burj Khalifa
                     </div>
-                    <div class="tradex-content hidden">
+                    <!-- <div class="tradex-content hidden">
                         " Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis atque nisi qui eaque
                         laborum velit, aspernatur totam quidem! Fugit sunt cum sapiente animi nulla hic deleniti quae
                         dolore vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit consequuntur
@@ -112,7 +112,7 @@
                         officiis, odio non ad accusamus molestias repudiandae. Ab fugit iste suscipit quasi harum amet
                         molestiae dolorem iure ullam non.
                         "
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="tradex-right">
@@ -139,7 +139,7 @@
         <div class="footer-insider">
             <div class="footer-top">
                 <div class="footer-top-right">
-                    <img src="./allimages/Image 7.png" alt="" id="subscribe"> Subscribe to our Newsletter
+                    <img src="./allimages/newsletter-icon (1).png" alt="" id="subscribe"> Subscribe to our Newsletter
                 </div>
                 <div class="footer-top-left">
                     <input type="email" name="email" id="email" placeholder="Your email">
