--- a/contact.html
+++ b/contact.html
@@ -163,10 +163,11 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> Khalid Bin Al Waleed Road - Office
+                        308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
