--- a/index.html
+++ b/index.html
@@ -416,10 +416,11 @@
                         <i class="fa-solid fa-phone-volume" id="footer-phone"></i> +97142556168
                     </div>
                     <div class="footer-mail">
-                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@smaple.com
+                        <i class="fa-solid fa-envelope" id="footer-phone"></i> info@bluechipgroup.me
                     </div>
                     <div class="footer-location">
-                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> 012 Sample, Street, Dubai
+                        <i class="fa-solid fa-location-dot" id="footer-phone"></i> Al Jawhara Building - Khalid Bin Al
+                        Waleed Road Office 308 – Dubai, UAE.
                     </div>
                 </div>
                 <div class="footer-section1">
@@ -427,7 +428,7 @@
                         Business Verticals
                     </div>
                     <div class="footer-name">
-                        Blue Music
+                        BlueChipFx
                     </div>
                     <div class="footer-name">
                         Acre n Yard
@@ -435,8 +436,9 @@
                     <div class="footer-name">
                         BlueChip Entertainment
                     </div>
+
                     <div class="footer-name">
-                        BlueChip TradeX
+                        Blue Music
                     </div>
                 </div>
                 <div class="footer-section1">
