--- a/victories.html
+++ b/victories.html
@@ -175,7 +175,7 @@
                         BlueChip Entertainment
                     </div>
                     <div class="footer-name">
-                        BlueChip TradeX
+                        BlueChipfx
                     </div>
                 </div>
                 <div class="footer-section1">
